<resources>
    <string name="app_name">PRJ_Android_DetectPothole</string>
    <string name="API_KEY_MAP">AIzaSyBmA13NoLEK1oiDWoshS310QUBZrkJqekw</string>
    <string name="GEOAPIFY_KEY">f7962c9506cc461884d044f6e86d3b2b</string>
    <string name="channel_name">Near pothole channel</string>
    <string name="channel_description">Has a pothole near you</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="dashboard">Dashboard</string>
    <string name="setting">Setting</string>
    <string name="desc_img_profile">Image User Profile</string>
    <string name="setting_title">SETTING</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="notification">Notification</string>
    <string name="other">Other</string>
    <string name="dark_mode">Dark mode</string>
    <string name="language">Language</string>
    <string name="update">Update</string>
    <string name="current_password">Current Password</string>
    <string name="wrong_password">Wrong Password!!!!</string>
    <string name="next">Next</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="ok">OK</string>
    <string-array name="pothole_level">
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
    </string-array>
    <string-array name="languages">
        <item>Item 1</item>
    </string-array>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="text_or"><u>OR</u></string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome">WELCOME !</string>
    <string name="login_to_get_started">Login to get started</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="remember_me">Remember me</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_code">Send Code</string>
    <string name="forgot_password_get_started">Forgot password get started</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset password</string>
    <string name="log_out">Log out</string>
    <string name="confirm_password_invalid">Confirm Password invalid</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="date">Date</string>
    <string name="level">Level</string>
    <string name="picture">Picture</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="serch_potholes">Serch potholes</string>
    <string name="arragne">Arragne</string>
    <string name="recently">Recently</string>
    <string name="around">Around</string>
    <string name="potholes">Potholes</string>
    <string name="add">Add</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="search">Search</string>

</resources>