<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:id="@+id/login_scr"
    android:orientation="vertical"
    >
    <ImageButton
        android:background="@color/trans"
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back" />

    <!-- Card Container -->
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/header_background"
            android:padding="16dp">

            <TextView
                android:id="@+id/header"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sub_header"
                android:gravity="center"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login_to_get_started"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/white_rounded_background"
            android:padding="20dp">


            <!-- Username Field -->
            <LinearLayout
                android:layout_marginTop="20dp"
                android:weightSum="4"
                android:orientation="horizontal"
                android:id="@+id/username_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/icon_user"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:scaleX="1.6"
                    android:scaleY="1.6"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_person" />

                <EditText
                    android:inputType="text"
                    android:id="@+id/username"
                    android:layout_weight="3.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/rounded_button"
                    android:hint="@string/username"
                    android:textColor="#000000"
                    android:textStyle="italic" />
            </LinearLayout>

            <!-- Password Field -->
            <LinearLayout
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:scaleX="1.6"
                    android:scaleY="1.6"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lock" />

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:layout_weight="3.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/rounded_button"
                    android:hint="@string/password"
                    android:textColor="#000000"
                    android:textStyle="italic" />
            </LinearLayout>

            <!-- Remember Me Checkbox -->
            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layoutDirection="ltr"
                android:text="@string/remember_me"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="16sp" />

            <!-- Login Button -->
            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/conner_button"
                android:text="@string/log_in"

                android:textColor="#FFFFFF" />

            <TextView
                android:gravity="end"
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:id="@+id/text_or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_or"
                android:textColor="@color/gray"
                android:textSize="25sp"
                android:textStyle="italic|bold" />


            <Button
                android:layout_marginBottom="5dp"
                android:id="@+id/button_google"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_below="@id/text_or"
                android:layout_marginStart="2dp"
                android:padding="10dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/conner_button"
                android:drawableStart="@drawable/ic_google"
                android:text="@string/continue_with_google"
                android:textColor="@color/white" />
            <!-- Text cố định -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dont_have_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <!-- Text sign in-->
                <TextView
                    android:id="@+id/sign_up_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button_google"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/dont_have_account_text"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_up"
                    android:textColor="#0000FF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>