<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/user_icon_profile"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/desc_img_profile" />
        <TextView
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/blue"/>

        <!--Account setting-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/user_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <Button
            android:id="@+id/change_password_btn"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|start"
            android:text="@string/change_password"
            android:background="@color/white"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:textAlignment="viewStart"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <Button
            android:id="@+id/edit_profile_btn"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|start"
            android:text="@string/edit_profile"
            android:background="@color/white"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:textAlignment="viewStart"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <Button
            android:id="@+id/log_out_btn"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|start"
            android:text="@string/log_out"
            android:background="@color/white"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:textAlignment="viewStart"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <!--Notification-->
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/notification_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">
            <TextView
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_weight="5.9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/notification"/>
            <Switch
                android:id="@+id/notify_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:thumbTint="@color/switch_thumb_color"/>
        </LinearLayout>

        <!--Other-->
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">
            <TextView
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_weight="5.9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:thumbTint="@color/switch_thumb_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">
            <TextView
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_weight="5.95"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/language"/>
            <Spinner
                android:id="@+id/spinner_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>