<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3">
    <ImageButton
        android:background="@color/trans"
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back" />

    <!-- Card Container -->
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/header_background"
            android:padding="16dp">

            <TextView
                android:id="@+id/header"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sub_header"
                android:gravity="center"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/forgot_password_get_started"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/white_rounded_background"
            android:padding="20dp">


            <LinearLayout
                android:layout_marginTop="20dp"
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:scaleX="1.6"
                    android:scaleY="1.6"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lock" />

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/new_password"
                    android:layout_weight="3.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/rounded_button"
                    android:hint="@string/password"
                    android:textColor="#000000"
                    android:textStyle="italic" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:scaleX="1.6"
                    android:scaleY="1.6"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lock" />

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/confirm_new_password"
                    android:layout_weight="3.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/rounded_button"
                    android:hint="@string/confirm_password"
                    android:textColor="#000000"
                    android:textStyle="italic" />
            </LinearLayout>
            <TextView
                android:id="@+id/confirm_password_invalid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password_invalid"
                android:textColor="@color/red"
                android:textStyle="bold|italic"
                android:visibility="invisible"/>
            <Button
                android:id="@+id/reset_pass"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/corner_button_gray"
                android:text="@string/reset_password"
                android:textColor="#FFFFFF" />


            <!-- Text cố định -->
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>