<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChangePasswordUpdateFragment">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:background="@color/blue"
            android:orientation="horizontal"
            android:weightSum="6">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:layout_marginStart="15dp"
                android:src="@drawable/setting_white_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:text="@string/setting"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/change_password"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <EditText
                android:id="@+id/new_password_input"
                android:paddingBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/new_password"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|start"
                android:background="@color/white"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                android:textAlignment="viewStart"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <EditText
                android:id="@+id/confirm_new_password_input"
                android:paddingBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/confirm_new_password"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|start"
                android:background="@color/white"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                android:textAlignment="viewStart"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />
        </LinearLayout>



        <Button
            android:id="@+id/update_btn"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textAllCaps="false"
            android:background="@drawable/corner_button_gray"
            android:textColor="@color/white"
            />

    </LinearLayout>

</FrameLayout>